--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_DEEZER_APP_ID = 594564
 VITE_DEEZER_SECRET_KEY = 96e13ba289c59e9e840f9b7ac73bf4ff
-VITE_DEEZER_REDIRECT_URI = http://localhost:5173
+VITE_DEEZER_REDIRECT_URI = https://foxibel.netlify.app
